--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 	</dependencies>
 
 	<build>
+		<outputDirectory>../target</outputDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
