--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,10 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		       <plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.7.0.1746</version>
-		       </plugin>
+				<groupId>org.codehaus.sonar</groupId>
+  				<artifactId>sonar-maven3-plugin</artifactId>
+  				<version>5.1-RC2</version>		       
+			</plugin>
 		</plugins>
 	</build>
 	
