--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 			</plugin>
 		       <plugin>
 				<groupId>org.codehaus.sonar</groupId>
-  				<artifactId>sonar-maven3-plugin</artifactId>
-  				<version>5.1-RC2</version>		       
+  				<artifactId>sonar-maven-plugin</artifactId>
+  				<version>5.1</version>		       
 			</plugin>
 		</plugins>
 	</build>
