--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,10 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		       <plugin>
-				<groupId>org.codehaus.sonar</groupId>
-  				<artifactId>sonar-maven-plugin</artifactId>
-  				<version>5.1</version>		       
-			</plugin>
-		</plugins>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.9.0.2155</version>		
+			</plugins>
 	</build>
 	
 	<distributionManagement>
