--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.9.0.2155</version>
-			</plugin>
+version			</plugin>
 		</plugins>
 	</build>
 	
