--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 				<groupId>org.sonarsource.scanner.maven</groupId>
 				<artifactId>sonar-maven-plugin</artifactId>
 				<version>3.9.0.2155</version>
-version			</plugin>
+			</plugin>
 		</plugins>
 	</build>
 	
