Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,12 @@ trigger:
 pool:
   name: Default
 
+variables:
+- name: JAVA_HOME_8_X64
+  value: /usr/lib/jvm/java-11-openjdk-amd64
+- name: M2_HOME
+  value: /usr/share/maven
+
 steps:
 - task: Maven@3
   inputs:
