--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,8 +10,11 @@ pool:
   name: TekTutor_Linux_Agent_Pool
 
 variables:
+- name: JAVA_HOME
+  value: /usr/lib/jvm/java-8-openjdk-amd64
+
 - name: JAVA_HOME_8_X64
-  value: /usr/lib/jvm/java-11-openjdk-amd64
+  value: /usr/lib/jvm/java-8-openjdk-amd64
 - name: M2_HOME
   value: /usr/share/maven
 
