--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,15 @@
 	</dependencies>
 
 	<build>
-		<outputDirectory>../target</outputDirectory>
 		<plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+              <outputDirectory>.</outputDirectory>
+            </configuration>
+          </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
